fix: [collapse] 修复未设置assist和extra处于多余元素的问题 fix #828

--- a/components/collapse/style/index.less
+++ b/components/collapse/style/index.less
@@ -27,6 +27,9 @@
       padding: @collapse-header-padding;
       background: @collapse-header-color-background;
     }
+    &-no-assist {
+      justify-content: space-between;
+    }
     &-top-border {
       border-bottom: @collapse-border-width solid @collapse-border-color;
     }
